--- a/user-pannel/package.json
+++ b/user-pannel/package.json
@@ -14,6 +14,7 @@
             "react-dom": "^18.2.0",
             "react-router-dom": "^6.15.0",
             "react-scripts": "5.0.1",
+            "toastify-js": "^1.12.0",
             "typescript": "^4.9.5",
             "web-vitals": "^2.1.4"
       },
@@ -44,6 +45,7 @@
             ]
       },
       "devDependencies": {
+            "@types/toastify-js": "^1.12.0",
             "autoprefixer": "^9.8.6",
             "postcss-cli": "^10.1.0",
             "tailwindcss": "^3.3.3"
